--- a/src/resources/log4j.properties
+++ b/src/resources/log4j.properties
@@ -5,10 +5,10 @@ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.Threshold=INFO 
 log4j.appender.CONSOLE.Target=System.out 
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout 
-log4j.appender.CONSOLE.layout.ConversionPattern=[framework] %d - %c -%-4r [%t] %-5p %c %x - %m%n 
+log4j.appender.CONSOLE.layout.ConversionPattern=%d - %c -%-4r [%t] %-5p %c %x - %m%n 
 
 log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.FILE.File=springdatajpa.log 
+log4j.appender.FILE.File=../../log/monitor.log 
 log4j.appender.FILE.Append=true 
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout 
-log4j.appender.FILE.layout.ConversionPattern=[framework] %d - %c -%-4r [%t] %-5p %c %x - %m%n 
+log4j.appender.FILE.layout.ConversionPattern=%d - %c -%-4r [%t] %-5p %c %x - %m%n 
