--- a/build.xml
+++ b/build.xml
@@ -1,136 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!-- WARNING: Eclipse auto-generated file.
-              Any modifications will be overwritten.
-              To include a user specific buildfile here, simply create one in the same
-              directory with the processing instruction <?eclipse.ant.import?>
-              as the first entry and export the buildfile again. -->
-<project basedir="." default="build" name="pmcweb">
-    <property environment="env"/>
-    <property name="ECLIPSE_HOME" value="../../eclipse"/>
-    <property name="debuglevel" value="source,lines,vars"/>
-    <property name="target" value="1.6"/>
-    <property name="source" value="1.6"/>
-    <path id="springframework-core.userclasspath">
-        <pathelement location="../../../3rdParty/jboss/modules/org/springframework/spring-core/3.0.5.RELEASE/spring-core-3.0.5.RELEASE.jar"/>
-    </path>
-    <path id="springframework-web.userclasspath">
-        <pathelement location="../../../3rdParty/jboss/modules/org/springframework/spring-web/3.0.5.RELEASE/spring-web-3.0.5.RELEASE.jar"/>
-    </path>
-    <path id="springframework-data.userclasspath">
-        <pathelement location="../../../3rdParty/jboss/modules/org/springframework/data/spring-data-jpa/1.3.4.RELEASE/spring-data-jpa-1.3.4.RELEASE.jar"/>
-        <pathelement location="../../../3rdParty/jboss/modules/org/springframework/data/spring-data-commons/1.5.2.RELEASE/spring-data-commons-1.5.2.RELEASE.jar"/>
-    </path>
-    <path id="springframework-beans.userclasspath">
-        <pathelement location="../../../3rdParty/jboss/modules/org/springframework/spring-beans/3.0.5.RELEASE/spring-beans-3.0.5.RELEASE.jar"/>
-    </path>
-    <path id="springframework-context.userclasspath">
-        <pathelement location="../../../3rdParty/jboss/modules/org/springframework/spring-context/3.0.5.RELEASE/spring-context-3.0.5.RELEASE.jar"/>
-    </path>
-    <path id="net.juniper.jmp.wtfbase.userclasspath">
-        <pathelement location="../../../wtfbase/bin/wtfbase.jar"/>
-    </path>
-    <path id="modules-javax.servlet.api.userclasspath">
-        <pathelement location="../../../3rdParty/jboss/modules/javax/servlet/api/main/jboss-servlet-api_3.0_spec-1.0.2.Final.jar"/>
-    </path>
-    <path id="modules-javax.validation.api.userclasspath">
-        <pathelement location="../../../3rdParty/jboss/modules/javax/validation/api/main/validation-api-1.0.0.GA.jar"/>
-    </path>
-    <path id="modules-org.apache.commons.beanutils.userclasspath">
-        <pathelement location="../../../3rdParty/jboss/modules/org/apache/commons/beanutils/main/commons-beanutils-1.8.3.jar"/>
-    </path>
-    <path id="modules-javax.persistence.api.userclasspath">
-        <pathelement location="../../../3rdParty/jboss/modules/javax/persistence/api/main/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
-    </path>
-    <path id="modules-javax.ws.rs.api.userclasspath">
-        <pathelement location="../../../3rdParty/jboss/modules/javax/ws/rs/api/main/jboss-jaxrs-api_1.1_spec-1.0.1.Final.jar"/>
-    </path>
-    <path id="modules-org.slf4j.userclasspath">
-        <pathelement location="../../../3rdParty/jboss/modules/org/slf4j/main/slf4j-api-1.7.2.jar"/>
-    </path>
-    <path id="3rdParty.net.sf.json.userclasspath">
-        <pathelement location="../../../3rdParty/net/sf/main/json-lib-2.4.jar"/>
-    </path>
-    <path id="pmcweb.classpath">
-        <pathelement location="web/WEB-INF/classes"/>
-        <pathelement location="web/WEB-INF/lib/httpcore-4.3.jar"/>
-        <pathelement location="web/WEB-INF/lib/httpclient-4.3.1.jar"/>
-        <pathelement location="web/WEB-INF/lib/tracerexport.jar"/>
-        <path refid="springframework-core.userclasspath"/>
-        <path refid="springframework-web.userclasspath"/>
-        <path refid="springframework-data.userclasspath"/>
-        <path refid="springframework-beans.userclasspath"/>
-        <path refid="springframework-context.userclasspath"/>
-        <path refid="net.juniper.jmp.wtfbase.userclasspath"/>
-        <path refid="modules-javax.servlet.api.userclasspath"/>
-        <path refid="modules-javax.validation.api.userclasspath"/>
-        <path refid="modules-org.apache.commons.beanutils.userclasspath"/>
-        <path refid="modules-javax.persistence.api.userclasspath"/>
-        <path refid="modules-javax.ws.rs.api.userclasspath"/>
-        <path refid="modules-org.slf4j.userclasspath"/>
-        <path refid="3rdParty.net.sf.json.userclasspath"/>
-    </path>
-    <target name="init">
-        <mkdir dir="web/WEB-INF/classes"/>
-        <copy includeemptydirs="false" todir="web/WEB-INF/classes">
-            <fileset dir="src/restapis">
-                <exclude name="**/*.launch"/>
-                <exclude name="**/*.java"/>
-            </fileset>
-        </copy>
-        <copy includeemptydirs="false" todir="web/WEB-INF/classes">
-            <fileset dir="src/services">
-                <exclude name="**/*.launch"/>
-                <exclude name="**/*.java"/>
-            </fileset>
-        </copy>
-        <copy includeemptydirs="false" todir="web/WEB-INF/classes">
-            <fileset dir="src/implements">
-                <exclude name="**/*.launch"/>
-                <exclude name="**/*.java"/>
-            </fileset>
-        </copy>
-        <copy includeemptydirs="false" todir="web/WEB-INF/classes">
-            <fileset dir="src/resources">
-                <exclude name="**/*.launch"/>
-                <exclude name="**/*.java"/>
-            </fileset>
-        </copy>
-        <copy includeemptydirs="false" todir="web/WEB-INF/classes">
-            <fileset dir="src/framework">
-                <exclude name="**/*.launch"/>
-                <exclude name="**/*.java"/>
-            </fileset>
-        </copy>
+<project default="create_run_jar" name="Create Runnable Jar for Project pmcweb with Jar-in-Jar Loader">
+    <!--this file was created by Eclipse Runnable JAR Export Wizard-->
+    <!--ANT 1.7 is required                                        -->
+    <target name="create_run_jar">
+        <jar destfile="bin/pmcweb.jar">
+            <manifest>
+                <attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader"/>
+                <attribute name="Rsrc-Main-Class" value="net.juniper.jmp.monitor.PmcWeb"/>
+                <attribute name="Class-Path" value="."/>
+                <attribute name="Rsrc-Class-Path" value="./ ecj-4.3.1.jar tomcat-dbcp.jar tomcat-embed-core.jar tomcat-embed-jasper.jar tomcat-embed-logging-juli.jar tomcat-embed-logging-log4j.jar"/>
+            </manifest>
+            <zipfileset src="jar-in-jar-loader.zip"/>
+            <fileset dir="web/WEB-INF/classes"/>
+            <zipfileset dir="lib" includes="ecj-4.3.1.jar"/>
+            <zipfileset dir="lib" includes="tomcat-dbcp.jar"/>
+            <zipfileset dir="lib" includes="tomcat-embed-core.jar"/>
+            <zipfileset dir="lib" includes="tomcat-embed-jasper.jar"/>
+            <zipfileset dir="lib" includes="tomcat-embed-logging-juli.jar"/>
+            <zipfileset dir="lib" includes="tomcat-embed-logging-log4j.jar"/>
+        </jar>
     </target>
-    <target name="clean">
-        <delete dir="web/WEB-INF/classes"/>
-    </target>
-    <target depends="clean" name="cleanall"/>
-    <target depends="build-subprojects,build-project" name="build"/>
-    <target name="build-subprojects"/>
-    <target depends="init" name="build-project">
-        <echo message="${ant.project.name}: ${ant.file}"/>
-        <javac debug="true" debuglevel="${debuglevel}" destdir="web/WEB-INF/classes" includeantruntime="false" source="${source}" target="${target}">
-            <src path="src/restapis"/>
-            <src path="src/services"/>
-            <src path="src/implements"/>
-            <src path="src/resources"/>
-            <src path="src/framework"/>
-            <classpath refid="pmcweb.classpath"/>
-        </javac>
-    </target>
-    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
-    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
-        <copy todir="${ant.library.dir}">
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </copy>
-        <unzip dest="${ant.library.dir}">
-            <patternset includes="jdtCompilerAdapter.jar"/>
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </unzip>
-    </target>
-    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
-        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
-        <antcall target="build"/>
-    </target>
+	<target name="package">
+		<copy todir="bin/monitor">
+			<fileset dir="web"/>
+		</copy>
+		<copy todir="bin/wtf">
+			<fileset dir="../../wtfbase/web"/>
+		</copy>
+	</target>
 </project>
