--- a/build.xml
+++ b/build.xml
@@ -1,31 +1,246 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project default="create_run_jar" name="Create Runnable Jar for Project pmcweb with Jar-in-Jar Loader">
+<project default="package" name="Create Runnable Jar for Project pmcweb with Jar-in-Jar Loader">
     <!--this file was created by Eclipse Runnable JAR Export Wizard-->
     <!--ANT 1.7 is required                                        -->
-    <target name="create_run_jar">
+    <target depends="clean,build" name="create_run_jar">
+    	<copy file="web/WEB-INF/classes/net/juniper/jmp/monitor/PmcWeb.class" toFile="bin/classes/net/juniper/jmp/monitor/PmcWeb.class"/>
         <jar destfile="bin/pmcweb.jar">
             <manifest>
-                <attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader"/>
-                <attribute name="Rsrc-Main-Class" value="net.juniper.jmp.monitor.PmcWeb"/>
+                <attribute name="Main-Class" value="net.juniper.jmp.monitor.PmcWeb"/>
                 <attribute name="Class-Path" value="."/>
-                <attribute name="Rsrc-Class-Path" value="./ ecj-4.3.1.jar tomcat-dbcp.jar tomcat-embed-core.jar tomcat-embed-jasper.jar tomcat-embed-logging-juli.jar tomcat-embed-logging-log4j.jar"/>
             </manifest>
-            <zipfileset src="jar-in-jar-loader.zip"/>
-            <fileset dir="web/WEB-INF/classes"/>
-            <zipfileset dir="lib" includes="ecj-4.3.1.jar"/>
-            <zipfileset dir="lib" includes="tomcat-dbcp.jar"/>
-            <zipfileset dir="lib" includes="tomcat-embed-core.jar"/>
-            <zipfileset dir="lib" includes="tomcat-embed-jasper.jar"/>
-            <zipfileset dir="lib" includes="tomcat-embed-logging-juli.jar"/>
-            <zipfileset dir="lib" includes="tomcat-embed-logging-log4j.jar"/>
+        	<fileset dir="bin/classes"/>
         </jar>
     </target>
-	<target name="package">
+	<target name="clean">
+		<delete dir="bin"/>
+		<delete dir="web/WEB-INF/classes"/>
+	</target>
+	<target depends="clean,build,create_run_jar" name="package">
 		<copy todir="bin/monitor">
 			<fileset dir="web"/>
 		</copy>
 		<copy todir="bin/wtf">
 			<fileset dir="../../wtfbase/web"/>
 		</copy>
+		<copy file="lib/derby.jar" toDir="bin/lib"/>
+		<copy file="lib/tomcatstart.jar" toDir="bin/lib"/>
+		<copy file="lib/ecj-4.3.1.jar" toDir="bin/lib"/>
+		<copy file="lib/tomcat-dbcp.jar" toDir="bin/lib"/>
+		<copy file="lib/tomcat-embed-core.jar" toDir="bin/lib"/>
+		<copy file="lib/tomcat-embed-jasper.jar" toDir="bin/lib"/>
+		<copy file="lib/tomcat-embed-logging-juli.jar" toDir="bin/lib"/>
+		<copy file="lib/tomcat-embed-logging-log4j.jar" toDir="bin/lib"/>
+		<copy file="../../3rdParty/jboss/modules/org\springframework\spring-core\3.1.4.RELEASE/spring-core-3.1.4.RELEASE.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\springframework\spring-web\3.1.4.RELEASE/spring-web-3.1.4.RELEASE.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\springframework\data\spring-data-commons\1.6.1.RELEASE/spring-data-commons-1.6.1.RELEASE.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\springframework\data\spring-data-jpa\1.4.1.RELEASE/spring-data-jpa-1.4.1.RELEASE.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\springframework\spring-beans\3.1.4.RELEASE/spring-beans-3.1.4.RELEASE.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\springframework\spring-context\3.1.4.RELEASE/spring-context-3.1.4.RELEASE.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\springframework\spring-asm\3.1.4.RELEASE/spring-asm-3.1.4.RELEASE.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\springframework\spring-orm\3.1.4.RELEASE/spring-orm-3.1.4.RELEASE.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\springframework\spring-jdbc\3.1.4.RELEASE/spring-jdbc-3.1.4.RELEASE.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\springframework\spring-tx\3.1.4.RELEASE/spring-tx-3.1.4.RELEASE.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\springframework\spring-aop\3.1.4.RELEASE/spring-aop-3.1.4.RELEASE.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\springframework\spring-expression\3.1.4.RELEASE/spring-expression-3.1.4.RELEASE.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\aopalliance/aopalliance-1.0.jar" toDir="bin/lib"/>
+        <copy file="../../wtfbase\bin/wtfbase.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\jboss\resteasy\resteasy-jaxrs\main/resteasy-jaxrs-2.3.5.Final.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\jboss\resteasy\resteasy-jaxrs\main/async-http-servlet-3.0-2.3.5.Final.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\apache\commons\logging\main/commons-logging-1.1.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/javax\servlet\api\main/jboss-servlet-api_3.0_spec-1.0.2.Final.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/javax\validation\api\main/validation-api-1.0.0.GA.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\apache\commons\beanutils\main/commons-beanutils-1.8.3.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/javax\persistence\api\main/hibernate-jpa-2.0-api-1.0.1.Final.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/javax\ws\rs\api\main/jboss-jaxrs-api_1.1_spec-1.0.1.Final.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\jboss\logging\main/jboss-logging-3.1.2.GA.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\dom4j\main/dom4j-1.6.1.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/javax\transaction\api\main/jboss-transaction-api_1.1_spec-1.0.1.Final.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\scannotation\scannotation\main/scannotation-1.0.2.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\hibernate\commons-annotations\main/hibernate-commons-annotations-4.0.1.Final.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\hibernate\validator\main/hibernate-validator-4.3.1.Final.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\javassist\main/javassist-3.15.0-GA.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\hibernate\main/hibernate-core-4.2.0.CR1.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\hibernate\main/hibernate-entitymanager-4.2.0.CR1.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\hibernate\main/hibernate-infinispan-4.2.0.CR1.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\slf4j\main/slf4j-api-1.7.2.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty/jboss/modules/org\antlr\main/antlr-2.7.7.jar" toDir="bin/lib"/>
+        <copy file="../../3rdParty\net\sf\main/json-lib-2.4.jar" toDir="bin/lib"/>
+		<zip destfile="bin/pmcweb.tar.gz" basedir="bin">
+		</zip>
+		<delete dir="bin/classes"/>
+		<delete dir="bin/wtf"/>
+		<delete dir="bin/monitor"/>
+		<delete file="bin/pmcweb.jar"/>
+		<delete dir="bin/lib"/>
 	</target>
+	
+	
+	<property name="debuglevel" value="source,lines,vars"/>
+	    <property name="target" value="1.6"/>
+	    <property name="source" value="1.6"/>
+	    <path id="springframework-core.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/springframework/spring-core/3.1.4.RELEASE/spring-core-3.1.4.RELEASE.jar"/>
+	    </path>
+	    <path id="springframework-web.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/springframework/spring-web/3.1.4.RELEASE/spring-web-3.1.4.RELEASE.jar"/>
+	    </path>
+	    <path id="springframework-data.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/springframework/data/spring-data-commons/1.6.1.RELEASE/spring-data-commons-1.6.1.RELEASE.jar"/>
+	        <pathelement location="../../3rdParty/jboss/modules/org/springframework/data/spring-data-jpa/1.4.1.RELEASE/spring-data-jpa-1.4.1.RELEASE.jar"/>
+	    </path>
+	    <path id="springframework-beans.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/springframework/spring-beans/3.1.4.RELEASE/spring-beans-3.1.4.RELEASE.jar"/>
+	    </path>
+	    <path id="springframework-context.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/springframework/spring-context/3.1.4.RELEASE/spring-context-3.1.4.RELEASE.jar"/>
+	    </path>
+	    <path id="springframework-asm.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/springframework/spring-asm/3.1.4.RELEASE/spring-asm-3.1.4.RELEASE.jar"/>
+	    </path>
+	    <path id="springframework-orm.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/springframework/spring-orm/3.1.4.RELEASE/spring-orm-3.1.4.RELEASE.jar"/>
+	    </path>
+	    <path id="springframework-jdbc.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/springframework/spring-jdbc/3.1.4.RELEASE/spring-jdbc-3.1.4.RELEASE.jar"/>
+	    </path>
+	    <path id="springframework-tx.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/springframework/spring-tx/3.1.4.RELEASE/spring-tx-3.1.4.RELEASE.jar"/>
+	    </path>
+	    <path id="springframework-aop.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/springframework/spring-aop/3.1.4.RELEASE/spring-aop-3.1.4.RELEASE.jar"/>
+	    </path>
+	    <path id="springframework-expression.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/springframework/spring-expression/3.1.4.RELEASE/spring-expression-3.1.4.RELEASE.jar"/>
+	    </path>
+	    <path id="3rdParty.aopalliance.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/aopalliance/aopalliance-1.0.jar"/>
+	    </path>
+	    <path id="net.juniper.jmp.wtfbase.userclasspath">
+	        <pathelement location="../../wtfbase/bin/wtfbase.jar"/>
+	    </path>
+	    <path id="modules-org.jboss.resteasy.resteasy-jaxrs.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/jboss/resteasy/resteasy-jaxrs/main/resteasy-jaxrs-2.3.5.Final.jar"/>
+	        <pathelement location="../../3rdParty/jboss/modules/org/jboss/resteasy/resteasy-jaxrs/main/async-http-servlet-3.0-2.3.5.Final.jar"/>
+	    </path>
+	    <path id="modules-org.apache.commons.logging.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/apache/commons/logging/main/commons-logging-1.1.jar"/>
+	    </path>
+	    <path id="modules-javax.servlet.api.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/javax/servlet/api/main/jboss-servlet-api_3.0_spec-1.0.2.Final.jar"/>
+	    </path>
+	    <path id="modules-javax.validation.api.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/javax/validation/api/main/validation-api-1.0.0.GA.jar"/>
+	    </path>
+	    <path id="modules-org.apache.commons.beanutils.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/apache/commons/beanutils/main/commons-beanutils-1.8.3.jar"/>
+	    </path>
+	    <path id="modules-javax.persistence.api.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/javax/persistence/api/main/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	    </path>
+	    <path id="modules-javax.ws.rs.api.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/javax/ws/rs/api/main/jboss-jaxrs-api_1.1_spec-1.0.1.Final.jar"/>
+	    </path>
+	    <path id="modules-org.jboss.logging.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/jboss/logging/main/jboss-logging-3.1.2.GA.jar"/>
+	    </path>
+	    <path id="modules-org.dom4j.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/dom4j/main/dom4j-1.6.1.jar"/>
+	    </path>
+	    <path id="modules-javax.transaction.api.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/javax/transaction/api/main/jboss-transaction-api_1.1_spec-1.0.1.Final.jar"/>
+	    </path>
+	    <path id="modules-org.scannotation.scannotation.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/scannotation/scannotation/main/scannotation-1.0.2.jar"/>
+	    </path>
+	    <path id="modules-org.hibernate.commons-annotations.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/hibernate/commons-annotations/main/hibernate-commons-annotations-4.0.1.Final.jar"/>
+	    </path>
+	    <path id="modules-org.hibernate.validator.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/hibernate/validator/main/hibernate-validator-4.3.1.Final.jar"/>
+	    </path>
+	    <path id="modules-org.javassist.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/javassist/main/javassist-3.15.0-GA.jar"/>
+	    </path>
+	    <path id="modules-org.hibernate.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/hibernate/main/hibernate-core-4.2.0.CR1.jar"/>
+	        <pathelement location="../../3rdParty/jboss/modules/org/hibernate/main/hibernate-entitymanager-4.2.0.CR1.jar"/>
+	        <pathelement location="../../3rdParty/jboss/modules/org/hibernate/main/hibernate-infinispan-4.2.0.CR1.jar"/>
+	    </path>
+	    <path id="modules-org.slf4j.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/slf4j/main/slf4j-api-1.7.2.jar"/>
+	    </path>
+	    <path id="modules-org.antlr.userclasspath">
+	        <pathelement location="../../3rdParty/jboss/modules/org/antlr/main/antlr-2.7.7.jar"/>
+	    </path>
+	    <path id="3rdParty.net.sf.json.userclasspath">
+	        <pathelement location="../../3rdParty/net/sf/main/json-lib-2.4.jar"/>
+	    </path>
+	    <path id="pmcweb.classpath">
+	        <pathelement location="web/WEB-INF/classes"/>
+	        <pathelement location="web/WEB-INF/lib/httpcore-4.3.jar"/>
+	        <pathelement location="web/WEB-INF/lib/httpclient-4.3.1.jar"/>
+	        <pathelement location="web/WEB-INF/lib/tracerexport.jar"/>
+	        <pathelement location="web/WEB-INF/lib/derby.jar"/>
+	        <path refid="springframework-core.userclasspath"/>
+	        <path refid="springframework-web.userclasspath"/>
+	        <path refid="springframework-data.userclasspath"/>
+	        <path refid="springframework-beans.userclasspath"/>
+	        <path refid="springframework-context.userclasspath"/>
+	        <path refid="springframework-asm.userclasspath"/>
+	        <path refid="springframework-orm.userclasspath"/>
+	        <path refid="springframework-jdbc.userclasspath"/>
+	        <path refid="springframework-tx.userclasspath"/>
+	        <path refid="springframework-aop.userclasspath"/>
+	        <path refid="springframework-expression.userclasspath"/>
+	        <path refid="3rdParty.aopalliance.userclasspath"/>
+	        <path refid="net.juniper.jmp.wtfbase.userclasspath"/>
+	        <path refid="modules-org.jboss.resteasy.resteasy-jaxrs.userclasspath"/>
+	        <path refid="modules-org.apache.commons.logging.userclasspath"/>
+	        <path refid="modules-javax.servlet.api.userclasspath"/>
+	        <path refid="modules-javax.validation.api.userclasspath"/>
+	        <path refid="modules-org.apache.commons.beanutils.userclasspath"/>
+	        <path refid="modules-javax.persistence.api.userclasspath"/>
+	        <path refid="modules-javax.ws.rs.api.userclasspath"/>
+	        <path refid="modules-org.jboss.logging.userclasspath"/>
+	        <path refid="modules-org.dom4j.userclasspath"/>
+	        <path refid="modules-javax.transaction.api.userclasspath"/>
+	        <path refid="modules-org.scannotation.scannotation.userclasspath"/>
+	        <path refid="modules-org.hibernate.commons-annotations.userclasspath"/>
+	        <path refid="modules-org.hibernate.validator.userclasspath"/>
+	        <path refid="modules-org.javassist.userclasspath"/>
+	        <path refid="modules-org.hibernate.userclasspath"/>
+	        <path refid="modules-org.slf4j.userclasspath"/>
+	        <path refid="modules-org.antlr.userclasspath"/>
+	        <path refid="3rdParty.net.sf.json.userclasspath"/>
+	        <pathelement location="lib/ecj-4.3.1.jar"/>
+	        <pathelement location="lib/tomcat-dbcp.jar"/>
+	        <pathelement location="lib/tomcat-embed-core.jar"/>
+	        <pathelement location="lib/tomcat-embed-jasper.jar"/>
+	        <pathelement location="lib/tomcat-embed-logging-juli.jar"/>
+	        <pathelement location="lib/tomcat-embed-logging-log4j.jar"/>
+	    </path>
+	    <target name="init">
+	        <mkdir dir="web/WEB-INF/classes"/>
+	        <copy includeemptydirs="false" todir="web/WEB-INF/classes">
+	            <fileset dir="resources">
+	                <exclude name="**/*.launch"/>
+	                <exclude name="**/*.java"/>
+	            </fileset>
+	        </copy>
+	        <copy includeemptydirs="false" todir="web/WEB-INF/classes">
+	            <fileset dir="src">
+	                <exclude name="**/*.launch"/>
+	                <exclude name="**/*.java"/>
+	            </fileset>
+	        </copy>
+	    </target>
+	    <target depends="init" name="build">
+	        <echo message="${ant.project.name}: ${ant.file}"/>
+	        <javac debug="true" debuglevel="${debuglevel}" destdir="web/WEB-INF/classes" includeantruntime="false" source="${source}" target="${target}">
+	            <src path="resources"/>
+	            <src path="src"/>
+	            <classpath refid="pmcweb.classpath"/>
+	        </javac>
+	    </target>
 </project>
