--- a/.classpath
+++ b/.classpath
@@ -5,19 +5,18 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/httpcore-4.3.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/httpclient-4.3.1.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/tracerexport.jar"/>
-	<classpathentry kind="lib" path="D:/devspace/weld/weld-servlet.jar" sourcepath="D:/devspace/weld/weld-servlet-sources.jar"/>
+	<classpathentry kind="lib" path="lib/derby.jar"/>
+	<classpathentry kind="lib" path="lib/ecj-4.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-dbcp.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-embed-core.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-embed-jasper.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-embed-logging-juli.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-embed-logging-log4j.jar"/>
+	<classpathentry kind="lib" path="lib/tomcatstart.jar"/>
+	<classpathentry kind="lib" path="D:/Develop/projects/3rdParty/weld/cdi-api.jar" sourcepath="D:/Develop/projects/3rdParty/weld/cdi-api-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Develop/projects/3rdParty/weld/weld-servlet-core.jar" sourcepath="D:/Develop/projects/3rdParty/weld/weld-servlet-core-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Develop/projects/3rdParty/weld/weld-spi.jar" sourcepath="D:/Develop/projects/3rdParty/weld/weld-spi-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springframework-core"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springframework-web"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springframework-data"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springframework-beans"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springframework-context"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springframework-asm"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springframework-orm"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springframework-jdbc"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springframework-tx"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springframework-aop"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springframework-expression"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/3rdParty.aopalliance"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/net.juniper.jmp.wtfbase"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/modules-org.jboss.resteasy.resteasy-jaxrs"/>
@@ -41,5 +40,14 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/modules-org.slf4j"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/modules-org.antlr"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/3rdParty.net.sf.json"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/modules-javax.inject.api"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/modules-com.google.guava"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/modules-javax.interceptor.api"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/modules-org.jboss.classfilewriter"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/modules-org.jboss.weld.api"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/modules-org.jboss.weld.core"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/modules-org.jboss.weld.spi"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/modules-ch.qos.cal10n"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/modules-org.slf4j.ext"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
