--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -15,6 +15,11 @@
 	<param-value>/rest</param-value>
   </context-param>
   <listener>
+		<listener-class>
+			org.springframework.web.context.ContextLoaderListener
+		</listener-class>
+  </listener> 
+  <listener>
   	<listener-class>org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap</listener-class>
   </listener>
   <listener>
@@ -31,4 +36,9 @@
   	<servlet-name>resteasy</servlet-name>
 	<url-pattern>/rest/*</url-pattern>
   </servlet-mapping>
+  <resource-ref>
+  	<res-ref-name>jdbc/MysqlDS</res-ref-name>
+  	<res-type>javax.sql.DataSource</res-type>
+  	<res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
