--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -8,7 +8,7 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d - %c -%-4r [%t] %-5p %c %x - %m%n 
 
 log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.FILE.File=../logs/monitor.log 
+log4j.appender.FILE.File=logs/monitor.log 
 log4j.appender.FILE.Append=true 
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout 
 log4j.appender.FILE.layout.ConversionPattern=%d - %c -%-4r [%t] %-5p %c %x - %m%n 
